--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -22,8 +22,8 @@
             android:src="@drawable/synectt_by_appministors"/>
 
         <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:src="@drawable/am_logo" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
