--- a/app/src/main/res/layout/activity_student_register.xml
+++ b/app/src/main/res/layout/activity_student_register.xml
@@ -27,7 +27,7 @@
                 android:text="Name:"
                 />
 
-            <EditText   android:id="@+id/rectangle_10"
+            <EditText   android:id="@+id/stu_name"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="46.8dp"
                 android:layout_width="313.07dp"
@@ -44,7 +44,7 @@
                 android:text="Reg. No.:"
                 />
 
-            <EditText   android:id="@+id/rectangle_11"
+            <EditText   android:id="@+id/Reg_No_edt"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="142.2dp"
                 android:layout_width="313.07dp"
@@ -61,7 +61,7 @@
                 android:text="Phn. No.:"
                 />
 
-            <EditText   android:id="@+id/rectangle_14"
+            <EditText   android:id="@+id/stu_Phn_no_edt"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="318dp"
                 android:layout_width="313.07dp"
@@ -78,7 +78,7 @@
                 android:text="Net Id:"
                 />
 
-            <EditText   android:id="@+id/rectangle_13"
+            <EditText   android:id="@+id/stu_net_id"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="229.42dp"
                 android:layout_width="313.07dp"
@@ -105,7 +105,7 @@
                 android:text="Branch:"
                 />
 
-            <EditText   android:id="@+id/rectangle_14_ek1"
+            <EditText   android:id="@+id/stu_branch_edt"
                 android:layout_marginStart="17dp"
                 android:layout_marginTop="492.38dp"
                 android:layout_width="313.07dp"
@@ -122,7 +122,7 @@
                 android:text="Year"
                 />
 
-            <EditText   android:id="@+id/rectangle_13_ek1"
+            <EditText   android:id="@+id/year_edt"
                 android:layout_marginStart="17dp"
                 android:layout_marginTop="403.8dp"
                 android:layout_width="313.07dp"
