--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
-    <EditText
+    <!--<EditText
         android:id="@+id/loginNetID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -38,5 +38,232 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginPw" />
+        app:layout_constraintTop_toBottomOf="@+id/loginPw" />-->
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <LinearLayout android:id="@+id/linearColumnellipsesixtysix"
+            android:layout_gravity="center_horizontal"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:orientation="vertical" style="@style/groupStylewhite_A700">
+            <FrameLayout android:gravity="start"
+                android:id="@+id/frameStackellipsesixtysix"
+                android:layout_height="@dimen/_185pxv" android:layout_width="match_parent">
+                <ImageView android:id="@+id/imageWhatsAppImage"
+                    android:layout_gravity="center"
+                    android:layout_height="@dimen/_76pxh"
+                    android:layout_marginHorizontal="@dimen/_40pxh"
+                    android:layout_marginVertical="@dimen/_40pxv"
+                    android:layout_width="@dimen/_98pxh"
+                    android:scaleType="fitXY"
+                    tools:ignore="ContentDescription" tools:src="@drawable/am_logo"/>
+                <TextView android:ellipsize="end"
+                    android:gravity="top|center"
+                    android:id="@+id/txtSynectt"
+                    android:layout_gravity="bottom|center"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/_89pxh"
+                    android:layout_marginStart="@dimen/_89pxh"
+                    android:layout_marginTop="@dimen/_10pxv"
+                    android:layout_width="match_parent"
+                    android:singleLine="true"
+                    android:text="synectt"
+                    style="@style/txtBrunoAceregular40" />
+            </FrameLayout>
+
+            <TextView android:ellipsize="end"
+                android:id="@+id/txtSignin"
+                android:layout_gravity="start"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/_29pxh"
+                android:layout_marginStart="@dimen/_29pxh"
+                android:layout_marginTop="@dimen/_13pxv"
+                android:layout_width="wrap_content"
+                android:singleLine="true"
+                android:text="Sign in"
+                style="@style/txtAirbnbCerealAppmedium24" />
+            <EditText
+                android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_12"
+                android:drawablePadding="@dimen/_16pxh"
+                android:drawableStart="@drawable/img_mail"
+                android:ellipsize="end"
+                android:hint="abc@email.com"
+                android:id="@+id/loginNetID"
+                android:inputType="textEmailAddress"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/_28pxh"
+                android:layout_marginStart="@dimen/_28pxh"
+                android:layout_marginTop="@dimen/_18pxv"
+                android:layout_width="match_parent"
+                android:lineSpacingExtra="@dimen/_5pxh"
+                android:paddingBottom="@dimen/_17pxv"
+                android:paddingEnd="@dimen/_30pxh"
+                android:paddingStart="@dimen/_16pxh"
+                android:paddingTop="@dimen/_19pxv"
+                android:singleLine="true"
+                android:text="Email"
+                android:textColorHint="@color/gray_600"
+                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
+            <EditText
+                android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_12"
+                android:drawableEnd="@drawable/img_hidden"
+                android:drawablePadding="@dimen/_16pxh"
+                android:drawableStart="@drawable/img_lock"
+                android:ellipsize="end"
+                android:hint="Your Password"
+                android:id="@+id/loginPw"
+                android:inputType="textPassword"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/_28pxh"
+                android:layout_marginStart="@dimen/_28pxh"
+                android:layout_marginTop="@dimen/_19pxv"
+                android:layout_width="match_parent"
+                android:lineSpacingExtra="@dimen/_5pxh"
+                android:paddingBottom="@dimen/_17pxv"
+                android:paddingEnd="@dimen/_19pxh"
+                android:paddingStart="@dimen/_18pxh"
+                android:paddingTop="@dimen/_19pxv"
+                android:singleLine="true"
+                android:text="@={signInVM.signInModel.etGroup33330Value}"
+                android:textColorHint="@color/gray_600"
+                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
+            <TextView android:ellipsize="end"
+                android:id="@+id/txtForgotPassword"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_28pxh"
+                android:layout_marginTop="@dimen/_22pxv"
+                android:layout_marginEnd="@dimen/_28pxh"
+                android:gravity="end"
+                android:layout_width="match_parent"
+                android:lineSpacingExtra="@dimen/_5pxh"
+                android:singleLine="true"
+                android:text="Forgot Password?"
+                style="@style/txtAirbnbCerealAppbook14_1"/>
+            <LinearLayout android:gravity="center_horizontal"
+                android:id="@+id/linearColumncontinue"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_36pxv"
+                android:layout_width="match_parent" android:orientation="vertical">
+                <Button
+                    android:id="@+id/loginBtn"
+                    android:layout_height="@dimen/_58pxv"
+                    android:layout_marginEnd="@dimen/_2pxh"
+                    android:layout_marginStart="@dimen/_2pxh" android:layout_width="@dimen/_271pxh"
+                    android:text="Sign In"
+                    android:textColor="@color/white_A700"
+                    android:fontFamily="@font/comfortaa"
+                    android:textSize="16sp"
+                    android:textAllCaps="true"
+                    android:textStyle="bold"
+                    android:drawableEnd="@drawable/img_arrowright"
+                    android:drawablePadding="@dimen/_8pxh"
+                    app:backgroundTint="@color/indigo_A200"
+                    style="@style/groupStyleindigo_A200cornerRadius"/>
+                <LinearLayout android:id="@+id/linearColumnor"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_30pxv"
+                    android:layout_marginBottom="@dimen/_10pxv"
+                    android:layout_width="match_parent" android:orientation="vertical">
+                    <TextView android:ellipsize="end"
+                        android:id="@+id/txtOR"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/_28pxh"
+                        android:layout_marginStart="@dimen/_28pxh"
+                        android:layout_width="wrap_content"
+                        android:lineSpacingExtra="@dimen/_5pxh"
+                        android:singleLine="true"
+                        android:text="OR"
+                        style="@style/txtAirbnbCerealAppmedium16_1"/>
+                    <LinearLayout
+                        android:gravity="start"
+                        android:id="@+id/linearRowgoogle"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/_1pxh"
+                        android:layout_marginStart="@dimen/_1pxh"
+                        android:layout_marginTop="@dimen/_11pxv"
+                        android:layout_width="match_parent"
+                        android:orientation="horizontal" style="@style/groupStylewhite_A700cornerRadius">
+                        <ImageView android:id="@+id/imageGoogle"
+                            android:layout_height="@dimen/_26pxh"
+                            android:layout_marginBottom="@dimen/_15pxv"
+                            android:layout_marginStart="@dimen/_46pxh"
+                            android:layout_marginTop="@dimen/_15pxv"
+                            android:layout_width="@dimen/_25pxh"
+                            android:scaleType="fitXY"
+                            android:src="@drawable/img_google"
+                            tools:ignore="ContentDescription" tools:src="@drawable/img_google"/>
+                        <TextView android:ellipsize="end"
+                            android:id="@+id/txtLoginwithGoog"
+                            android:layout_height="@dimen/_26pxh"
+                            android:layout_marginBottom="@dimen/_14pxv"
+                            android:layout_marginEnd="@dimen/_47pxh"
+                            android:layout_marginStart="@dimen/_20pxh"
+                            android:layout_marginTop="@dimen/_15pxv"
+                            android:layout_weight="0.84"
+                            android:layout_width="0dp"
+                            android:lineSpacingExtra="@dimen/_5pxh"
+                            android:singleLine="true"
+                            android:text="Login with Google"
+                            style="@style/txtAirbnbCerealAppbook16"/>
+                    </LinearLayout>
+                    <LinearLayout android:gravity="start"
+                        android:id="@+id/linearRowfacebook"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/_1pxh"
+                        android:layout_marginStart="@dimen/_1pxh"
+                        android:layout_marginTop="@dimen/_11pxv"
+                        android:layout_width="match_parent"
+                        android:orientation="horizontal" style="@style/groupStylewhite_A700cornerRadius">
+                        <ImageView
+                            android:id="@+id/imageFacebook"
+                            android:layout_height="@dimen/_26pxh"
+                            android:layout_marginBottom="@dimen/_15pxv"
+                            android:layout_marginStart="@dimen/_46pxh"
+                            android:layout_marginTop="@dimen/_15pxv"
+                            android:layout_width="@dimen/_25pxh"
+                            android:scaleType="fitXY"
+                            android:src="@drawable/img_facebook"
+                            tools:ignore="ContentDescription" tools:src="@drawable/img_facebook"/>
+                        <TextView android:ellipsize="end"
+                            android:id="@+id/txtLoginwithFace"
+                            android:layout_height="@dimen/_26pxh"
+                            android:layout_marginBottom="@dimen/_14pxv"
+                            android:layout_marginEnd="@dimen/_47pxh"
+                            android:layout_marginStart="@dimen/_20pxh"
+                            android:layout_marginTop="@dimen/_15pxv"
+                            android:layout_weight="0.84"
+                            android:layout_width="0dp"
+                            android:lineSpacingExtra="@dimen/_5pxh"
+                            android:singleLine="true"
+                            android:text="Login with Facebook"
+                            style="@style/txtAirbnbCerealAppbook16"/>
+                    </LinearLayout>
+                    <TextView
+                        android:ellipsize="end"
+                        android:gravity="center_horizontal"
+                        android:id="@+id/dontHavAccntBtn"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/_28pxh"
+                        android:layout_marginStart="@dimen/_28pxh"
+                        android:layout_marginTop="@dimen/_24pxv"
+                        android:layout_width="match_parent"
+                        android:lineSpacingExtra="@dimen/_5pxh"
+                        android:singleLine="true"
+                        android:text="don't have an account?"
+                        style="@style/txtAirbnbCerealAppbook15"/>
+                </LinearLayout>
+
+            </LinearLayout>
+        </LinearLayout>
+
+    </ScrollView>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
