--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -6,27 +6,28 @@
     tools:context=".SplashScreenActivity">
     <!--android:background="@drawable/__bg__landing_page_shape"-->
 
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical"
+    <LinearLayout android:gravity="center"
+        android:id="@+id/linearFrontpage"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
+        app:layout_constraintEnd_toEndOf="parent"
+        android:orientation="vertical">
         <ImageView
-            android:layout_width="264dp"
-            android:layout_height="100dp"
-            android:src="@drawable/synectt_by_appministors"/>
-
-        <ImageView
-            android:layout_width="match_parent"
+            android:gravity="center"
+            android:id="@+id/txtSynectt"
             android:layout_height="wrap_content"
-            android:src="@drawable/am_logo" />
-
-    </androidx.appcompat.widget.LinearLayoutCompat>
+            android:layout_width="250dp"
+            android:src="@drawable/synectt_by_appministers"/>
+        <ImageView android:id="@+id/imageWhatsAppImage"
+            android:layout_gravity="center"
+            android:layout_height="125dp"
+            android:layout_width="150dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/am_logo"/>
+    </LinearLayout>
 
 
 
