--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,46 @@
     <color name="_rectangle_1_color">#E0E0E0</color>
     <color name="student_color">#000000</color>
     <color name="login_register_color">#FFFFFF</color>
+
+    <color name="white_A700_b2">#b2ffffff</color>
+    <color name="indigo_A200_65">#655668ff</color>
+    <color name="cyan_300_14">#144ad2e4</color>
+    <color name="blue_A400">#1977f3</color>
+    <color name="bluegray_100_3f">#3fd2d4e2</color>
+    <color name="indigo_200_21">#219cb1d5</color>
+    <color name="indigo_A200">#5668ff</color>
+    <color name="indigo_300_3f">#3f6f7dc8</color>
+    <color name="red_400">#ef635a</color>
+    <color name="bluegray_600_0f">#0f4f5588</color>
+    <color name="bluegray_900_1e">#1e2e2e4e</color>
+    <color name="white_A700_99">#99ffffff</color>
+    <color name="white_A700_75">#75ffffff</color>
+    <color name="gray_900_a6">#a6110c26</color>
+    <color name="black_900_00">#00000000</color>
+    <color name="black_900">#000000</color>
+    <color name="cyan_A400_28">#2800f8ff</color>
+    <color name="gray_700_19">#19595959</color>
+    <color name="deep_orange_300">#f59762</color>
+    <color name="gray_600">#747688</color>
+    <color name="white_A700_4c">#4cffffff</color>
+    <color name="gray_500">#9d9898</color>
+    <color name="gray_605">#7f7979</color>
+    <color name="gray_900">#110c26</color>
+    <color name="gray_300">#e4dede</color>
+    <color name="orange_200">#ffcd6b</color>
+    <color name="gray_100">#f4f4fe</color>
+    <color name="teal_A400">#29d697</color>
+    <color name="indigo_300">#7974e7</color>
+    <color name="bluegray_900">#2a2749</color>
+    <color name="bluegray_800">#2c3550</color>
+    <color name="white_A700_00">#00ffffff</color>
+    <color name="indigo_A700">#3f38dd</color>
+    <color name="bluegray_500">#6f6d8f</color>
+    <color name="indigo_A401">#4a43eb</color>
+    <color name="indigo_A203">#5c56f3</color>
+    <color name="black_900_96">#96000000</color>
+    <color name="indigo_A400">#3d55f0</color>
+    <color name="white_A701">#fefeff</color>
+    <color name="white_A700">#ffffff</color>
+    <color name="indigo_A200_63">#635668ff</color>
 </resources>
