--- a/app/src/main/res/layout/activity_faculty_register.xml
+++ b/app/src/main/res/layout/activity_faculty_register.xml
@@ -5,121 +5,188 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FacultyRegister">
-    <ScrollView android:id="@+id/student_reg"
-        android:layout_width="wrap_content"
+    <ScrollView android:id="@+id/facutly_register"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <RelativeLayout android:id="@+id/content_container"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+        <LinearLayout android:id="@+id/linearColumnarrowleft"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/_37pxv"
+            android:layout_marginEnd="@dimen/_17pxh"
+            android:layout_marginStart="@dimen/_17pxh"
+            android:layout_marginTop="@dimen/_10pxv"
+            android:layout_width="match_parent" android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_marginVertical="@dimen/_10pxh"
+                android:layout_marginHorizontal="@dimen/_10pxh">
+                <ImageView android:id="@+id/signupBackBtn"
+                    android:layout_height="@dimen/_22pxh"
+                    android:layout_marginEnd="@dimen/_10pxh"
+                    android:layout_width="@dimen/_25pxh"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/img_arrowleft"
+                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
+                <TextView android:ellipsize="end"
+                    android:id="@+id/txtSignup"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/_11pxh"
+                    android:layout_marginStart="@dimen/_11pxh"
+                    android:layout_width="wrap_content"
+                    android:singleLine="true"
+                    android:text="Sign up"
+                    style="@style/txtAirbnbCerealAppmedium24" />
+            </LinearLayout>
 
-            <TextView android:id="@+id/name_"
-                android:fontFamily="@font/kalam"
-                android:textSize="20sp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="25dp"
-                android:layout_width="147.93dp"
-                android:layout_height="33.08dp"
-                android:text="Name:"
-                />
+            <EditText
+                android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_12"
+                android:drawablePadding="@dimen/_18pxh"
+                android:drawableStart="@drawable/img_user"
+                android:ellipsize="end"
+                android:hint="Full name"
+                android:id="@+id/Fac_Name" android:inputType="text"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_10pxh"
+                android:layout_marginTop="@dimen/_11pxv"
+                android:layout_width="match_parent"
+                android:lineSpacingExtra="@dimen/_5pxh"
+                android:paddingBottom="@dimen/_18pxv"
+                android:paddingEnd="@dimen/_30pxh"
+                android:paddingStart="@dimen/_18pxh"
+                android:paddingTop="@dimen/_18pxv"
+                android:singleLine="true"
+                android:textColorHint="@color/gray_600"
+                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
+            <EditText
+                android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_12"
+                android:drawablePadding="@dimen/_16pxh"
+                android:drawableStart="@drawable/img_mail"
+                android:ellipsize="end"
+                android:hint="abc@srmist.edu.in"
+                android:id="@+id/NET_ID_edt"
+                android:inputType="textEmailAddress"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_10pxh"
+                android:layout_marginTop="@dimen/_20pxv"
+                android:layout_width="match_parent"
+                android:lineSpacingExtra="@dimen/_5pxh"
+                android:paddingBottom="@dimen/_18pxv"
+                android:paddingEnd="@dimen/_30pxh"
+                android:paddingStart="@dimen/_18pxh"
+                android:paddingTop="@dimen/_18pxv"
+                android:singleLine="true"
+                android:textColorHint="@color/gray_600"
+                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
 
-            <EditText android:id="@+id/Fac_Name"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="46.8dp"
-                android:layout_width="313.07dp"
-                android:layout_height="39.52dp"
-                android:inputType="text"/>
-
-            <TextView android:id="@+id/Fac_id"
-                android:fontFamily="@font/kalam"
-                android:textSize="20sp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="112.22dp"
-                android:layout_width="152.85dp"
-                android:layout_height="33.08dp"
-                android:text="Faculty ID:"
-                />
-
-            <EditText   android:id="@+id/Fac_ID_edt"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="142.2dp"
-                android:layout_width="313.07dp"
-                android:layout_height="39.52dp"
-                android:inputType="number"/>
-
-            <TextView android:id="@+id/phn_no__"
-                android:fontFamily="@font/kalam"
-                android:textSize="20sp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="294.83dp"
-                android:layout_width="152.85dp"
-                android:layout_height="33.08dp"
-                android:text="Phn. No.:"
-                />
-
-            <EditText   android:id="@+id/fac_Phn_No_edt"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="318dp"
-                android:layout_width="313.07dp"
-                android:layout_height="39.52dp"
-                android:inputType="phone"/>
-
-            <TextView android:id="@+id/net_id_"
-                android:fontFamily="@font/kalam"
-                android:textSize="20sp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="207.61dp"
-                android:layout_width="203.67dp"
-                android:layout_height="33.08dp"
-                android:text="Net Id:"
-                />
-
-            <EditText   android:id="@+id/NET_ID_edt"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="229.42dp"
-                android:layout_width="313.07dp"
-                android:layout_height="39.52dp" />
-
-            <TextView android:id="@+id/__srmist_edu_in"
-                android:fontFamily="@font/kalam"
-                android:textSize="12sp"
-                android:textColor="@android:color/darker_gray"
-                android:layout_marginLeft="229dp"
-                android:layout_marginTop="238dp"
-                android:layout_width="117dp"
-                android:layout_height="32dp"
-                android:text="\@srmist.edu.in"
-                />
-
-            <TextView android:id="@+id/Dept"
-                android:fontFamily="@font/kalam"
-                android:textSize="20sp"
-                android:layout_marginLeft="17dp"
-                android:layout_marginTop="382dp"
-                android:layout_width="203.67dp"
-                android:layout_height="33.08dp"
-                android:text="Department"
-                />
-
-            <EditText   android:id="@+id/Dept_edt"
-                android:layout_marginStart="17dp"
-                android:layout_marginTop="403.8dp"
-                android:layout_width="313.07dp"
-                android:layout_height="39.52dp"
-                android:inputType="text" />
+            <EditText
+                android:id="@+id/Dept_edt"
+                android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_12"
+                android:drawablePadding="@dimen/_16pxh"
+                android:drawableStart="@drawable/department_24"
+                android:ellipsize="end"
+                android:hint="Department"
+                android:inputType="textEmailAddress"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_10pxh"
+                android:layout_marginTop="@dimen/_20pxv"
+                android:layout_width="match_parent"
+                android:lineSpacingExtra="@dimen/_5pxh"
+                android:paddingBottom="@dimen/_18pxv"
+                android:paddingEnd="@dimen/_30pxh"
+                android:paddingStart="@dimen/_18pxh"
+                android:paddingTop="@dimen/_18pxv"
+                android:singleLine="true"
+                android:textColorHint="@color/gray_600"
+                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
+            <EditText
+                android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_12"
+                android:drawableEnd="@drawable/img_hidden"
+                android:drawablePadding="@dimen/_16pxh"
+                android:drawableStart="@drawable/img_lock"
+                android:ellipsize="end"
+                android:hint="Your password"
+                android:id="@+id/fac_pw_edt"
+                android:inputType="textPassword"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_10pxh"
+                android:layout_marginTop="@dimen/_24pxv"
+                android:layout_width="match_parent"
+                android:lineSpacingExtra="@dimen/_5pxh"
+                android:paddingBottom="@dimen/_18pxv"
+                android:paddingEnd="@dimen/_30pxh"
+                android:paddingStart="@dimen/_18pxh"
+                android:paddingTop="@dimen/_18pxv"
+                android:singleLine="true"
+                android:textColorHint="@color/gray_600"
+                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
+            <EditText
+                android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_12"
+                android:drawableEnd="@drawable/img_hidden"
+                android:drawablePadding="@dimen/_16pxh"
+                android:drawableStart="@drawable/img_lock"
+                android:ellipsize="end"
+                android:hint="Confirm password"
+                android:id="@+id/fac_cpw_edt"
+                android:inputType="textPassword"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_10pxh"
+                android:layout_marginTop="@dimen/_26pxv"
+                android:layout_width="match_parent"
+                android:lineSpacingExtra="@dimen/_5pxh"
+                android:paddingBottom="@dimen/_18pxv"
+                android:paddingEnd="@dimen/_30pxh"
+                android:paddingStart="@dimen/_18pxh"
+                android:paddingTop="@dimen/_18pxv"
+                android:singleLine="true"
+                android:text="@={signUpVM.signUpModel.etGroup33330TwoValue}"
+                android:textColorHint="@color/gray_600"
+                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
+            <EditText
+                android:id="@+id/fac_Phn_No_edt"
+                android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_12"
+                android:drawablePadding="@dimen/_16pxh"
+                android:drawableStart="@drawable/baseline_call_24"
+                android:ellipsize="end"
+                android:hint="+91 &#x2022;&#x2022;&#x2022;&#x2022;&#x2022; &#x2022;&#x2022;&#x2022;&#x2022;&#x2022;"
+                android:inputType="textPassword"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_10pxh"
+                android:layout_marginTop="@dimen/_26pxv"
+                android:layout_width="match_parent"
+                android:lineSpacingExtra="@dimen/_5pxh"
+                android:paddingBottom="@dimen/_18pxv"
+                android:paddingEnd="@dimen/_30pxh"
+                android:paddingStart="@dimen/_18pxh"
+                android:paddingTop="@dimen/_18pxv"
+                android:singleLine="true"
+                android:textColorHint="@color/gray_600"
+                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
 
             <Button
                 android:id="@+id/FacRegSubBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="148dp"
-                android:layout_marginTop="609dp"
-                android:text="Submit" />
+                android:layout_gravity="center_horizontal"
+                android:layout_height="@dimen/_58pxv"
+                android:layout_marginEnd="@dimen/_10pxh"
+                android:layout_marginStart="@dimen/_10pxh"
+                android:layout_marginTop="@dimen/_34pxv" android:layout_width="@dimen/_271pxh"
+                android:text="Sign Up"
+                android:textStyle="bold"
+                android:textColor="@color/white_A700"
+                android:fontFamily="@font/comfortaa"
+                android:textSize="16sp"
+                android:textAllCaps="true"
+                android:drawableEnd="@drawable/img_arrowright"
+                android:drawablePadding="@dimen/_8pxh"
+                app:backgroundTint="@color/indigo_A200"
+                style="@style/groupStyleindigo_A200cornerRadius"/>
 
-        </RelativeLayout>
+        </LinearLayout>
 
     </ScrollView>
 
