--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -4,13 +4,18 @@
         android:id="@+id/page_explore"
         android:enabled="true"
         android:icon="@drawable/baseline_explore_24"
-        android:title="Explore"/>
+        android:title="Explore" />
 
     <item
         android:id="@+id/page_events"
         android:enabled="true"
         android:icon="@drawable/img_bag"
         android:title="Events"/>
+
+    <item
+        android:id="@+id/placeholder"
+        android:enabled="false"
+        android:title=""/>
 
     <item
         android:id="@+id/page_map"
