--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".DashboardFragment">
 
     <LinearLayout android:gravity="start"
@@ -11,64 +12,56 @@
         android:layout_width="match_parent"
         android:orientation="vertical" style="@style/groupStylewhite_A700">
         <FrameLayout android:id="@+id/frameStackmenu"
-            android:layout_height="@dimen/_194pxv" android:layout_width="match_parent">
+            android:layout_height="wrap_content" android:layout_width="match_parent">
             <LinearLayout android:id="@+id/linearColumnmenu"
                 android:layout_gravity="top|start"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/_10pxv"
                 android:layout_width="match_parent"
-                android:orientation="vertical" style="@style/groupStyleindigo_A401cornerRadius">
+                android:orientation="vertical"
+                android:background="@drawable/rectangle_bg_indigo_a401_radius_bl_33_br_33">
                 <androidx.appcompat.widget.Toolbar
                     android:gravity="center_horizontal"
                     android:id="@+id/toolbarToolbar"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/_24pxh"
                     android:layout_marginStart="@dimen/_24pxh"
-                    android:layout_marginTop="@dimen/_35pxv"
+                    android:layout_marginTop="@dimen/_8pxv"
+                    android:layout_marginBottom="@dimen/_8pxv"
                     android:layout_width="match_parent" app:contentInsetStart="0dp">
                     <LinearLayout android:id="@+id/linearRowmenu"
                         android:layout_height="wrap_content"
-                        android:layout_width="match_parent" android:orientation="horizontal">
+                        android:layout_width="match_parent" android:orientation="horizontal"
+                        android:weightSum="10">
                         <ImageView android:id="@+id/imageMenu"
-                            android:layout_height="@dimen/_19pxh"
-                            android:layout_marginBottom="@dimen/_8pxv"
-                            android:layout_marginTop="@dimen/_8pxv"
-                            android:layout_width="@dimen/_24pxh"
+                            android:layout_height="@dimen/_24pxh"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:scaleType="fitXY"
+                            android:layout_gravity="center"
                             android:src="@drawable/img_menu"
                             tools:ignore="ContentDescription" tools:src="@drawable/img_menu"/>
-                        <LinearLayout android:gravity="start"
+                        <TextView android:ellipsize="end"
+                            android:gravity="center"
                             android:id="@+id/linearColumngroupten"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="@dimen/_1pxv"
-                            android:layout_marginStart="@dimen/_86pxh"
-                            android:layout_weight="0.64"
-                            android:layout_width="0dp" android:orientation="vertical">
-                            <Spinner android:id="@+id/spinnerGroupTen"
-                                android:layout_height="wrap_content"
-                                android:layout_width="match_parent" tools:listitem="@layout/spinner_item"/>
-                            <TextView android:ellipsize="end"
-                                android:gravity="center_horizontal"
-                                android:id="@+id/txtDhakaBanglade"
-                                android:layout_height="wrap_content"
-                                android:layout_marginEnd="@dimen/_6pxh"
-                                android:layout_marginStart="@dimen/_3pxh"
-                                android:layout_marginTop="@dimen/_3pxv"
-                                android:layout_width="match_parent"
-                                android:singleLine="true"
-                                android:text="@{homeVM.homeModel.txtDhakaBanglade}"
-                                style="@style/txtAirbnbCerealAppmedium13" tools:text="@string/lbl_new_yourk_usa"/>
-                        </LinearLayout>
+                            android:layout_height="match_parent"
+                            android:layout_width="0dp"
+                            android:layout_weight="8"
+                            android:textSize="18sp"
+                            android:singleLine="true"
+                            android:text="Synnect"
+                            style="@style/txtAirbnbCerealAppmedium13"/>
+
                         <ImageView android:id="@+id/imageCheckmark"
                             android:layout_height="@dimen/_36pxh"
-                            android:layout_marginStart="@dimen/_74pxh"
-                            android:layout_width="@dimen/_36pxh"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:scaleType="fitXY"
                             android:src="@drawable/img_checkmark"
                             tools:ignore="ContentDescription" tools:src="@drawable/img_checkmark"/>
                     </LinearLayout>
                 </androidx.appcompat.widget.Toolbar>
-                <LinearLayout android:id="@+id/linearRow"
+                <!--<LinearLayout android:id="@+id/linearRow"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/_52pxv"
                     android:layout_marginEnd="@dimen/_24pxh"
@@ -135,9 +128,9 @@
                             android:text="@{homeVM.homeModel.txtFilters}"
                             style="@style/txtAirbnbCerealAppbook12" tools:text="@string/lbl_filters"/>
                     </LinearLayout>
-                </LinearLayout>
+                </LinearLayout>-->
             </LinearLayout>
-            <LinearLayout android:id="@+id/linearRowrectangle4195"
+            <!--<LinearLayout android:id="@+id/linearRowrectangle4195"
                 android:layout_gravity="bottom|end"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_10pxh"
@@ -240,59 +233,60 @@
                     android:scaleType="fitXY"
                     android:src="@drawable/img_rectangle4195"
                     tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle4195"/>
-            </LinearLayout>
+            </LinearLayout>-->
         </FrameLayout>
         <LinearLayout android:gravity="start"
             android:id="@+id/linearColumnpopular"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_10pxh"
+            android:layout_marginEnd="@dimen/_4pxh"
             android:layout_marginTop="@dimen/_29pxv"
             android:layout_width="match_parent"
             android:orientation="vertical" style="@style/groupStylewhite_A700">
-            <LinearLayout android:gravity="start"
+            <androidx.constraintlayout.widget.ConstraintLayout android:gravity="start"
                 android:id="@+id/linearRowpopular"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/_10pxh"
                 android:layout_width="match_parent"
-                android:orientation="horizontal" style="@style/groupStylecornerRadius">
+                android:orientation="horizontal" >
                 <TextView android:ellipsize="end"
                     android:id="@+id/txtPopular"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_1pxv"
-                    android:layout_weight="0.73"
-                    android:layout_width="0dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_width="wrap_content"
                     android:lineSpacingExtra="@dimen/_6pxh"
                     android:singleLine="true"
-                    android:text="@{homeVM.homeModel.txtPopular}"
-                    style="@style/txtAirbnbCerealAppmedium18" tools:text="@string/lbl_upcoming_events"/>
+                    android:text="Upcoming Events"
+                    style="@style/txtAirbnbCerealAppmedium18"/>
                 <LinearLayout android:id="@+id/linearRowallcopy"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/_2pxv"
-                    android:layout_marginStart="@dimen/_122pxh"
-                    android:layout_marginTop="@dimen/_2pxv"
-                    android:layout_weight="0.27"
-                    android:layout_width="0dp"
-                    android:orientation="horizontal" style="@style/groupStylecornerRadius">
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_width="wrap_content"
+                    android:orientation="horizontal">
                     <TextView android:ellipsize="end"
                         android:id="@+id/txtAllCopy"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.87"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:lineSpacingExtra="@dimen/_5pxh"
                         android:singleLine="true"
-                        android:text="@{homeVM.homeModel.txtAllCopy}"
-                        style="@style/txtAirbnbCerealAppbook14" tools:text="@string/lbl_see_all"/>
+                        android:text="See All"
+                        style="@style/txtAirbnbCerealAppbook14"/>
                     <ImageView android:id="@+id/imageVectorOne"
-                        android:layout_height="@dimen/_9pxh"
-                        android:layout_marginBottom="@dimen/_4pxv"
-                        android:layout_marginStart="@dimen/_5pxh"
-                        android:layout_marginTop="@dimen/_5pxv"
-                        android:layout_width="@dimen/_6pxh"
+                        android:layout_height="@dimen/_16pxh"
+                        android:layout_width="@dimen/_16pxh"
+                        android:layout_marginStart="@dimen/_8pxh"
+                        android:layout_gravity="center_vertical"
                         android:scaleType="fitXY"
-                        android:src="@drawable/img_vector1"
-                        tools:ignore="ContentDescription" tools:src="@drawable/img_vector1"/>
+                        android:src="@drawable/img_arrowright"
+                        app:tint="@color/gray_600"
+                        tools:ignore="ContentDescription" />
                 </LinearLayout>
-            </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerListgroup33261"
                 android:layout_height="wrap_content"
@@ -301,66 +295,24 @@
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 itemSpace="@{@dimen/_16pxh}" tools:itemCount="2" tools:listitem="@layout/row_listgroup33261"/>
-            <View
+
+            <TextView android:ellipsize="end"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_4pxv"
+                android:layout_width="wrap_content"
+                android:lineSpacingExtra="@dimen/_6pxh"
+                android:singleLine="true"
+                android:text="Notice Board"
+                style="@style/txtAirbnbCerealAppmedium18"/>
+            <LinearLayout
+                android:layout_marginEnd="@dimen/_6pxh"
+                android:layout_marginTop="@dimen/_8pxv"
                 android:background="@drawable/rectangle_bg_cyan_a400_28_radius_12"
                 android:id="@+id/viewRectangle"
-                android:layout_height="@dimen/_127pxv"
-                android:layout_marginEnd="@dimen/_10pxh"
-                android:layout_marginTop="@dimen/_29pxv" android:layout_width="@dimen/_328pxh"/>
-            <LinearLayout android:gravity="start"
-                android:id="@+id/linearRowpopularOne"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/_10pxh"
-                android:layout_marginTop="@dimen/_30pxv"
-                android:layout_width="match_parent"
-                android:orientation="horizontal" style="@style/groupStylecornerRadius">
-                <TextView android:ellipsize="end"
-                    android:id="@+id/txtPopularOne"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_1pxv"
-                    android:layout_weight="0.64"
-                    android:layout_width="0dp"
-                    android:lineSpacingExtra="@dimen/_6pxh"
-                    android:singleLine="true"
-                    android:text="@{homeVM.homeModel.txtPopularOne}"
-                    style="@style/txtAirbnbCerealAppmedium18" tools:text="@string/lbl_nearby_you"/>
-                <LinearLayout android:id="@+id/linearRowallcopyOne"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/_2pxv"
-                    android:layout_marginStart="@dimen/_174pxh"
-                    android:layout_marginTop="@dimen/_2pxv"
-                    android:layout_weight="0.36"
-                    android:layout_width="0dp"
-                    android:orientation="horizontal" style="@style/groupStylecornerRadius">
-                    <TextView android:ellipsize="end"
-                        android:id="@+id/txtAllCopyOne"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.87"
-                        android:layout_width="0dp"
-                        android:lineSpacingExtra="@dimen/_5pxh"
-                        android:singleLine="true"
-                        android:text="@{homeVM.homeModel.txtAllCopyOne}"
-                        style="@style/txtAirbnbCerealAppbook14" tools:text="@string/lbl_see_all"/>
-                    <ImageView android:id="@+id/imageVectorOneOne"
-                        android:layout_height="@dimen/_9pxh"
-                        android:layout_marginBottom="@dimen/_4pxv"
-                        android:layout_marginStart="@dimen/_5pxh"
-                        android:layout_marginTop="@dimen/_5pxv"
-                        android:layout_width="@dimen/_6pxh"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/img_vector1"
-                        tools:ignore="ContentDescription" tools:src="@drawable/img_vector1"/>
-                </LinearLayout>
-            </LinearLayout>
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerListtime"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/_10pxh"
-                android:layout_marginTop="@dimen/_13pxv"
-                android:layout_width="match_parent"
+                android:layout_height="@dimen/_150pxv"
+                android:layout_gravity="center"
                 android:orientation="vertical"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                itemSpace="@{@dimen/_14pxh}" tools:itemCount="2" tools:listitem="@layout/row_listtime"/>
+                android:layout_width="match_parent"/>
         </LinearLayout>
     </LinearLayout>
 
