--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,6 +21,12 @@
         <item name="android:fontFamily">@font/comfortaa</item>
         <item name="android:textFontWeight" tools:targetApi="p">400</item>
     </style>
+    <style name="txtAirbnbCerealAppmedium14">
+        <item name="android:textSize">@dimen/_14pxh</item>
+        <item name="android:textColor">@color/red_400</item>
+        <item name="android:fontFamily">@font/comfortaa</item>
+        <item name="android:textFontWeight" tools:targetApi="p">400</item>
+    </style>
     <style name="txtAirbnbCerealAppbook16">
         <item name="android:textSize">@dimen/_16pxh</item>
         <item name="android:textColor">@color/gray_900</item>
@@ -66,5 +72,35 @@
     </style>
     <style name="groupStylewhite_A700">
         <item name="android:background">@drawable/rectangle_bg_white_a700</item>
+    </style>
+    <style name="txtAirbnbCerealAppmedium13">
+        <item name="android:textSize">@dimen/_13pxh</item>
+        <item name="android:textColor">@color/gray_100</item>
+        <item name="android:fontFamily">@font/comfortaa</item>
+        <item name="android:textFontWeight" tools:targetApi="p">500</item>
+    </style>
+    <style name="txtAirbnbCerealAppmedium18">
+        <item name="android:textSize">@dimen/_18pxh</item>
+        <item name="android:textColor">@color/gray_900_a6</item>
+        <item name="android:fontFamily">@font/comfortaa</item>
+        <item name="android:textFontWeight" tools:targetApi="p">500</item>
+    </style>
+    <style name="txtAirbnbCerealAppmedium18_1">
+        <item name="android:textSize">@dimen/_18pxh</item>
+        <item name="android:textColor">@color/black_900</item>
+        <item name="android:fontFamily">@font/comfortaa</item>
+        <item name="android:textFontWeight" tools:targetApi="p">400</item>
+    </style>
+    <style name="txtAirbnbCerealAppmedium12">
+        <item name="android:textSize">@dimen/_12pxh</item>
+        <item name="android:textColor">@color/indigo_A700</item>
+        <item name="android:fontFamily">@font/comfortaa</item>
+        <item name="android:textFontWeight" tools:targetApi="p">500</item>
+    </style>
+    <style name="txtAirbnbCerealAppbook13">
+        <item name="android:textSize">@dimen/_13pxh</item>
+        <item name="android:textColor">@color/bluegray_900</item>
+        <item name="android:fontFamily">@font/comfortaa</item>
+        <item name="android:textFontWeight" tools:targetApi="p">400</item>
     </style>
 </resources>
